added bearer token for authorize api
